dataset1235/2025-2/805158916/users/639665975/executions/2651470117_2383239197.log
== RUN (2025-08-20 16:08:38)
-- CODE: 
import math

A = float(input("distancia a:"))
B = float(input("distancia b:"))
TETA = float(input("angulo y:"))

C = math.sqrt(A**2+B**2 - 2*A*B*math.cos(TETA))
angulo = math.degrees(TETA)

print(round(C,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distancia a:distancia b:angulo y:111.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distancia a:distancia b:angulo y:25.64
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distancia a:distancia b:angulo y:22.55
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distancia a:distancia b:angulo y:1.94
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distancia a:distancia b:angulo y:56.82
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distancia a:distancia b:angulo y:17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 16:00:38)
-- CODE: 
float(input("distancia a:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distancia a:
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distancia a:
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distancia a:
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distancia a:
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distancia a:
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distancia a:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 16:02:56)
-- CODE: 
import math

A = float(input("distancia a:"))
B = float(input("distancia b:"))
C = float(input("angulo y:"))

print(math.degrees(C))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distancia a:distancia b:angulo y:1241.0265842533631
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distancia a:distancia b:angulo y:3718.496090399043
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distancia a:distancia b:angulo y:2813.222774092342
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distancia a:distancia b:angulo y:704.7380880109126
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distancia a:distancia b:angulo y:4446.152490215188
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distancia a:distancia b:angulo y:3437.746770784939
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 16:02:30)
-- CODE: 
import math

A = float(input("distancia a:"))
B = float(input("distancia b:"))
C = float(input("angulo y:"))

print(degrees(C))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(degrees(C))
          ^^^^^^^
NameError: name 'degrees' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(degrees(C))
          ^^^^^^^
NameError: name 'degrees' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(degrees(C))
          ^^^^^^^
NameError: name 'degrees' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(degrees(C))
          ^^^^^^^
NameError: name 'degrees' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(degrees(C))
          ^^^^^^^
NameError: name 'degrees' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(degrees(C))
          ^^^^^^^
NameError: name 'degrees' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 19:42:15)
-- CODE: 
import math

A = float(input("distancia a:"))
B = float(input("distancia b:"))
TETA = float(input("angulo y (em graus):"))
angulo = math.radians(TETA)
C = A**2+B**2 - 2*A*B*math.cos(angulo)
side = math.sqrt(C)


print(round(side,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distancia a:distancia b:angulo y (em graus):87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distancia a:distancia b:angulo y (em graus):16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distancia a:distancia b:angulo y (em graus):17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distancia a:distancia b:angulo y (em graus):1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distancia a:distancia b:angulo y (em graus):54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distancia a:distancia b:angulo y (em graus):9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 16:01:34)
-- CODE: 
A = float(input("distancia a:"))
B = float(input("distancia b:"))
C = float(input("angulo y:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distancia a:distancia b:angulo y:
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distancia a:distancia b:angulo y:
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distancia a:distancia b:angulo y:
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distancia a:distancia b:angulo y:
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distancia a:distancia b:angulo y:
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distancia a:distancia b:angulo y:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
